# EvoScripts

./: .gitignore  CMakeLists.txt  README.md
ancestors/: tester.es
src/: allocStrategy.cpp  allocStrategy.hpp  esParser.hpp  evodex.cpp  evodex.hpp  lpu.cpp  lpu.hpp  lpu_addons.hpp  lpu_pool.cpp  lpu_pool.hpp  main.cpp  manager.cpp  manager.hpp  memory.cpp  memory.hpp  memoryCleaner.cpp  memoryCleaner.hpp  memoryHelperStructs.cpp  memoryHelperStructs.hpp  memorySpace.cpp  memorySpace.hpp  randomizer.cpp  randomizer.hpp  visualizer.cpp  visualizer.hpp
utils/: tree_plot.py
